--- a/0408inclass.Rmd
+++ b/0408inclass.Rmd
@@ -3,3 +3,7 @@ title: "0408inclass"
 output: html_document
 ---
 
+```{r}
+fromJSON("http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000157-002",
+         simplifyDataFrame = F) -> newTaipeiCityVaccine
+```
