--- a/0429inclass.Rmd
+++ b/0429inclass.Rmd
@@ -4,5 +4,28 @@ output: html_document
 ---
 
 ```{r}
+sequenceNums <- c(11, 6, 8, 11, 12, 11, 3, 7, 10, 8)
+print(sequenceNums)
 
+sequenceNums %% 2 # 餘數為1則是奇數，0則是偶數
+```
+4.4 Relational Opearators 
+產生「要／不要」向量的常見手法
+```{r}
+example <- list(
+  name=c("小明","小花","小新","美美"),
+  height=c(175,166,170,160),
+  weight=c(77,NA,60,43),
+  birthday=lubridate::ymd(c("1998-03-11","1999-12-22","1995-08-22","2001-10-10")),
+  hobby=c("美食 旅遊","旅遊 時尚","3C 美食","音樂 旅遊"),
+  residence=c("Taipei","New Taipei","Taichung","Kaohsiung"),
+  allowance=factor(c("0-1000","1001-2000","2000+","1001-2000")),
+  bloodType=c("A","B","B","O")
+)
+```
+```{r}
+str(example[c("name","hieght")])
+
+pick_above170 <- example$hieght >= 170
+example$name[pick_above170]
 ```
